# file-organizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/file_organizer/: __init__.py
tests/: test_organizer.py
