[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "file-organizer-cli"
version = "0.1.0"
description = "Organiza archivos en carpetas segun su extension"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"

[project.scripts]
file-organizer = "file_organizer:main"

[tool.setuptools.packages.find]
where = ["src"]
